# synthadoc

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: badges.json  demo-guide.md  design.md  user-quick-start-guide.md
docs/plans/: 2026-04-11-v01-features-implementation.md
examples/history-of-computing/: AGENTS.md
examples/history-of-computing/raw_sources/: computing-pioneers-timeline.xlsx  cs-milestones-overview.pptx
hooks/: README.md  git-auto-commit.py
obsidian-plugin/: main.js  package-lock.json
obsidian-plugin/src/: api.test.ts  api.ts  main.test.ts  main.ts
scripts/: update_badges.py
synthadoc/: config.py  errors.py
synthadoc/agents/: ingest_agent.py  lint_agent.py  query_agent.py  skill_agent.py
synthadoc/cli/: _http.py  _init.py  _port.py  ingest.py  install.py  lint.py  logo.py  main.py  scaffold.py  serve.py
synthadoc/core/: cache.py  logging_config.py  orchestrator.py
synthadoc/demos/: __init__.py
synthadoc/integration/: http_server.py
synthadoc/providers/: __init__.py  anthropic.py  ollama.py  openai.py
synthadoc/storage/: wiki.py
tests/: test_config.py
tests/agents/: test_ingest_agent.py  test_lint_agent.py  test_query_agent.py
tests/cli/: test_cli.py  test_cli_commands.py  test_install_port.py  test_lint_cli.py  test_scaffold_cli.py
tests/core/: test_cache.py  test_queue.py
tests/performance/: test_performance.py
tests/providers/: test_providers.py
tests/skills/: test_image_skill.py  test_skills.py  test_web_search.py
tests/storage/: test_wiki.py
(+18 files in other folders)
